# master_me

./: .gitignore  .gitmodules  Makefile  README.md  VERSION.mk  expanders.lib  lufs_meter.dsp  master_me.dsp  readme.md  soundsgood.dsp  soundsgood19.dsp
.github/workflows/: build.yml
bench/: fastmath.cpp  faustbench  faustbench.cpp
bench/soundsgood/: Makefile
docs/: master_me documentation.html  master_me documentation.odt
lib/: ebur128.dsp  ebur128.ipynb
plugin/: ExtraProperties.h  Makefile  MasterMePlugin.cpp  MasterMeUI.cpp  MasterMeWidgetGroups.hpp  MasterMeWidgetLayouts.hpp  SoundsgoodPlugin.cpp  SoundsgoodUI.cpp  SoundsgoodWidgetGroups.hpp  SoundsgoodWidgetLayouts.hpp  macos-installer-welcome.txt
plugin/jucewrapper/: CMakeLists.txt  JuceWrapper.cpp
plugin/master_me-easy-presets.lv2/: manifest.ttl  presets.ttl
plugin/utils/: FloatFifo.hpp  SharedMemory.hpp
plugin/widgets/: DoubleClickHelper.hpp  Histogram.hpp  InspectorWindow.hpp  QuantumFrameWithSwitchMB.hpp
plugin/widgets/implot/: implot.h  implot_internal.h
pregen/: DistrhoPluginInfo.h  Plugin.cpp
pregen/master_me.lv2/: manifest.ttl  plugin.ttl  ui.ttl
template/: DistrhoPluginInfo.h  Plugin.cpp
template/LV2/: manifest.ttl  plugin.ttl  ui.ttl
